@@ -1,7 +1,5 @@
 @echo off
 
-set JAVA_OPTS=-Xms64m -Xmx1024m -XX:MaxPermSize=128M %JAVA_OPTS%
-
 set THIS_DIR=%CD%
 set SCRIPT_DIR=%~dp0
 cd %SCRIPT_DIR%
